--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Email Service API for MouseUX Website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index"
   },
   "author": "Gershon Papiashvili (papigers)",
   "license": "ISC",
