--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Gershon Papiashvili (papigers)",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "nodemailer": "^2.7.0"
   }
